--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ipykernel>=7.1.0",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.8",
+    "nltk>=3.9.2",
     "numpy>=2.3.5",
     "openpyxl>=3.1.5",
     "pandas>=3.0.0",
